# MJava-Compiler

./: .gitignore  CMakeLists.txt  README.md  lexer.bat  lexer.cpp  lexer.h  parser.bat  state.dot  test.bat  test.cpp  词法分析器的设计与实现.md  语法分析器的设计与实现.md
include/: ast.h  dictionary.h  error.h  jsonformatter.h  lexer.h  parser.h  scanner.h  token.h
src/: ast.cpp  dictionary.cpp  error.cpp  gtest.cpp  jsonformatter.cpp  lexer.cpp  main.cpp  parser.cpp  scanner.cpp  test.cpp  token.cpp
test/: gtest.cpp  test.cpp
